feat: add scheduled notifications and completion banners
- initialize flutter_local_notifications/permission_handler/timezone and request permissions on startup
- extend settings with a notifications toggle, persistence, and permission handling
- schedule/cancel Pomodoro and timer notifications, add animated completion banners, and wire the new services through every scope
- update Android/iOS/macOS/Windows configs and plugin registrants plus widget tests for the new dependency

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSUserNotificationsUsageDescription</key>
+	<string>Pomodo App sends reminders when focus and break sessions complete.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
