--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   audioplayers: ^6.1.0
   shared_preferences: ^2.2.3
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.9.4
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
