--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,14 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase / Google configuration (contains API keys)
+ios/Runner/GoogleService-Info.plist
+android/app/google-services.json
+
+# Signing keys and certificates
+*.p12
+*.pem
+*.key
+*.keystore
+*.jks
