--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   fake_async: ^1.3.1
+  firebase_auth_mocks: ^0.15.1
   firebase_core_platform_interface: ^6.0.2
+  mocktail: ^1.0.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
